# ffmpeg-playground

./: CMakeLists.txt
transcode/: audio_transcode.cpp
utils/: io.hpp  resample.hpp
